# snooper

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: install.sh  uninstall.sh
src/snooper/: __init__.py  cli.py  downloader.py  ffmpeg.py  filenames.py  models.py  reddit.py  urls.py
tests/: test_cli.py  test_downloader.py  test_filenames.py  test_reddit.py
