[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snooper"
version = "0.1.0"
description = "Download media associated with Reddit posts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
snooper = "snooper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
