[metadata]
name = snooper
version = 0.1.0
description = Download media associated with Reddit posts.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src

[options.extras_require]
external =
    yt-dlp>=2025.1.0
test =
    pytest>=8.0
dev =
    yt-dlp>=2025.1.0
    pytest>=8.0

[options.entry_points]
console_scripts =
    snooper = snooper.cli:main
